# DoData_tutorials

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
demo/: __init__.py  config.py  demo.pic.yml
dodata_tutorials/cutback/: 3_upload_measurements.ipynb  4_download_data.ipynb
dodata_tutorials/resistance/: 3_upload_measurements.ipynb  4_download_data.ipynb
dodata_tutorials/rings/: 2_generate_measurement_data.ipynb  3_upload_measurements.ipynb  4_download_data.ipynb
dodata_tutorials/spirals/: 2_generate_measurement_data.ipynb  3_upload_measurements.ipynb  4_download_data.ipynb  5_delete.ipynb
